create get order details routes for user and chef
