# server/api/controllers/orders/routes.js
@@ -4,5 +4,7 @@ import controller from './controller';
 
 export default express
   .Router()
+  .get('/getOrdersOfAUser', authHandler, controller.getOrdersOfAUser)
+  .get('/getPaidOrdersOfAChef', authHandler, controller.getPaidOrdersOfAChef)
   .post('/initializeOrder', authHandler, controller.initializeSubscription)
   .post('/verifyOrder', authHandler, controller.verifyOrder);
